# simple-roguelike

./: Cargo.toml  Makefile  index.html  savegame.json  simple-roguelike.js  simple-roguelike_bg.wasm
.github/workflows/: publish.yml
old_src/: components.rs  gui.rs  main.rs  map.rs  melee_combat_system.rs  menu.rs  player.rs  rect.rs  spawner.rs
src/: components.rs  damage_system.rs  gui.rs  inventory_system.rs  main.rs  map.rs  map_indexing_system.rs  melee_combat_system.rs  monster_ai_system.rs  player.rs  random_table.rs  rect.rs  saveload_system.rs  spawner.rs  visibility_system.rs
src/spawn/: charaters.rs  items.rs  mod.rs  monsters.rs  random.rs  structures.rs
wasm/: index.html  simple-roguelike.js  simple-roguelike_bg.wasm
