[package]
name = "simple-roguelike"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rltk = { version = "0.8.0", features = ["serde"] }
specs = { version = "0.20.0", features = ["serde"] }
specs-derive = "0.4.1"
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1.0.93", features = ["derive"] }
serde_json = "1.0.39"

[target.x86_64-pc-windows-gnu]
linker = "/usr/bin/x86_64-w64-mingw32-gcc"
ar = "/usr/x86_64-w64-mingw32/bin/ar"

[profile.release]
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"   # Optimize for size.
lto = true        # enable link time optimization
codegen-units = 1 # reduce parallel codegen units
panic = "abort"   # don't unwind and provide stack traces
